[package]
name = "mirarust"
version = "0.1.0"
edition = "2024"

[build]
target = "x86_64-unknown-linux-musl"

[[bin]]
name = "foreachwikiindblist-parallel"
path = "src/foreachwikiindblist-parallel.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.54", features = ["derive"] }
serde_json = "1.0.148"
