[package]
name = "mirarust"
version = "0.1.0"
edition = "2024"

[build]
target = "x86_64-unknown-linux-musl"

[[bin]]
name = "foreachwikiindblist-parallel"
path = "src/foreachwikiindblist-parallel.rs"

[[bin]]
name = "custom-domain-checker"
path = "src/ssl/ssl.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
serde_json = "1.0.148"
reqwest = { version = "0.12", features = ["blocking"] }
regex = "1.12.3"
sqlite = "0.37.0"
rand = "0.10.0"
